--- a/lectures/git/git.tex
+++ b/lectures/git/git.tex
@@ -28,8 +28,8 @@
     \begin{itemize}
         \ii{Spårbarhet -- vem som gjort vad och när. T.ex.:}
         \begin{itemize}
-            \ii{``Vad har ändrats sedan förra veckan?''}
-            \ii{``Vem la till den här raden?''}
+            \ii{\enquote{Vad har ändrats sedan förra veckan?}}
+            \ii{\enquote{Vem la till den här raden?}}
         \end{itemize}
         \ii{Möjlighet att återgå till äldre versioner av filer vid behov.}
         \ii{Möjliggör parallellt arbete och konflikthantering.}
@@ -64,7 +64,7 @@
 
     \begin{block}{Distribuerade system}
         \begin{itemize}
-            \ii{Ingen central server -- varje användare är en ``nod'' i systemet.}
+            \ii{Ingen central server -- varje användare är en \enquote{nod} i systemet.}
             \ii{Varje användare har en lokal kopia av hela projektets historik.}
             \ii{Kommandon: \emph{clone} (kopiera hela repository), \emph{checkout} och \emph{commit} (men annorlunda), och \emph{push/pull} (synkronisera ändringar).}
             \ii{Exempel: Git, Mercurial}
@@ -318,7 +318,7 @@
     \frametitle{Remote}
 
     \begin{itemize}
-        \ii{Git använder termen \emph{remote}. Lokal ``spegling'' av fjärrrepository.}
+        \ii{Git använder termen \emph{remote}. Lokal \enquote{spegling} av fjärrrepository.}
         \ii{Standardnamn för remote är \texttt{origin}.}
         \ii{Möjligt att ha flera remotes för olika kopior av projektet.}
         \ii{Kolla med \texttt{git remote [-a, -v, -vv]}}
@@ -422,7 +422,7 @@
 \end{frame}
 
 \begin{frame}[t]
-    \frametitle{Vanlig merge -- skapar en ``merge commit''}
+    \frametitle{Vanlig merge -- skapar en \enquote{merge commit}}
     \begin{center}
         \begin{tikzpicture}
             % Place the image at 50% scale
@@ -497,7 +497,7 @@
 
     \begin{itemize}
         \ii{\code{HEAD} är en \emph{symbolisk referens} till den branch som är utcheckad i ditt workspace.}
-        \ii{``Detatched HEAD'' -- om du checkar ut en specifik commit, snarare än en branch.}
+        \ii{\enquote{Detatched HEAD} -- om du checkar ut en specifik commit, snarare än en branch.}
     \end{itemize}
 \end{frame}
 
@@ -522,7 +522,7 @@
     \frametitle{Vad händer nu?}
     \begin{itemize}
         \ii{Läs avsnittet om Git i Scalakompendiet (Björn Regnell).}
-        \ii{Se avsnitt 1.1, 1.2, 1.3, 1.6 samt 1.7 av youtube-serien ``Git and GitHub for Poets''.}
+        \ii{Se avsnitt 1.1, 1.2, 1.3, 1.6 samt 1.7 av youtube-serien \enquote{Git and GitHub for Poets}.}
         \ii{Läs kapitel 1, 2 och 3.1--3.2 i Pro Git-boken (Chacon \& Straub).}
         \ii{Länkar till materialet finns på kurshemsidan:
 
