--- a/lectures/latex/latex.tex
+++ b/lectures/latex/latex.tex
@@ -37,7 +37,7 @@
     \ii{\LaTeX\ fungerar annorlunda!}
     \begin{itemize}
       \ii{Fokus på innehåll istället för utseende}
-      \ii{Skriver kommandon eller ``taggar'' för att uttrycka formatering}
+      \ii{Skriver kommandon eller \enquote{taggar} för att uttrycka formatering}
       \ii{Texten \emph{kompileras} till ett formaterat dokument (oftast PDF)}
     \end{itemize}
   \end{itemize}
@@ -351,7 +351,7 @@ I sällsynta fall kan man vilja skriva något \textbf{i fetstil}.
   \ti{Streck, mellanrum, och punkter:}
   
   \begin{exlatex}
-``pgk-kursen'' skrivs med bindestreck.
+\enquote{pgk-kursen} skrivs med bindestreck.
 Dod-delen pågår under vecka 1--4.
 Tyvärr är den inte längre\ldots
 
@@ -372,7 +372,7 @@ Dagens datum: \today.
   \begin{exlatexhide}
   Om man använder \LaTeX
   \footnote{uttalas
-    ``lah-tekh''} så
+    \enquote{lah-tekh}} så
   blir det bra. Alla rapporter
   blir automatiskt 
   % snyggt  
@@ -420,7 +420,7 @@ ASCII-apostrof (visa tecknet): \textquotesingle
 Annas bok; EU:s beslut (inte EU\textquoteright s).
 
 % Engelska citat manuellt (om man inte använder csquotes):
-Engelska: ``hi there'' (skrivs med \texttt{``} och \texttt{''}).
+Engelska: \enquote{hi there} (skrivs med \texttt{\enquote{} och \texttt{}}).
 \end{exlatex}
 
 \end{frame}
