--- a/lectures/unix/unix.tex
+++ b/lectures/unix/unix.tex
@@ -24,7 +24,7 @@
     \begin{itemize}
         \ii{Dator --- kör program}
         \ii{Program --- instruktioner för datorn}
-        \ii{Operativsystem --- en samling program som gör det möjligt att köra ``vanliga'' program}
+        \ii{Operativsystem --- en samling program som gör det möjligt att köra \enquote{vanliga} program}
         \ii{Operativsystemet hanterar:}
         \begin{itemize}
             \is{de program som körs (program körs ofta parallellt, operativsystemet ser till att programmen får minne och tid att exekvera)}
@@ -57,7 +57,7 @@
         \ii{1983: GNU-verktygen -- fritt Unix-liknande operativsystem.}
         \ii{1991: Linus Torvalds skapar Linuxkärnan -- hanterar hårdvaruinteraktioner.}
         \ii{Linuxkärnan + GNU-verktyg = GNU/Linux -- skapar en fullständig användarmiljö.}
-        \ii{``Linux'' används ofta som kortform för hela systemet.}
+        \ii{\enquote{Linux} används ofta som kortform för hela systemet.}
     \end{itemize}
 \end{frame}
 
@@ -105,7 +105,7 @@
     \ti{Filer ligger alltid i en katalog (mapp).}
 
     \halfblankline
-    \ti{Filer och kataloger lagras på ``permanent'' minne (hårddisk, SSD, \ldots).}
+    \ti{Filer och kataloger lagras på \enquote{permanent} minne (hårddisk, SSD, \ldots).}
 
     \halfblankline
     \ti{Filnamn i Unix/Linux:}
@@ -136,7 +136,7 @@
 %         /h/d24/b/uw3307bq-s/dod/lab1/example.txt
 %     \end{Code}
 
-%     Men operativsystemet håller reda på en \emph{aktuell katalog}, som ungefär betyder \emph{``var i filträdet befinner jag mig just nu?''}. Istället för att ange det absoluta filnamnet, räcker det att ange vägen med start från den aktuella katalogen -- ett s.k. \emph{relativt} filnamn.
+%     Men operativsystemet håller reda på en \emph{aktuell katalog}, som ungefär betyder \emph{\enquote{var i filträdet befinner jag mig just nu?}}. Istället för att ange det absoluta filnamnet, räcker det att ange vägen med start från den aktuella katalogen -- ett s.k. \emph{relativt} filnamn.
 
 %     \halfblankline
 
