--- a/lab-instructions/modules/unix/unix_terminal.tex
+++ b/lab-instructions/modules/unix/unix_terminal.tex
@@ -13,7 +13,7 @@
 Länkar till det ovan refererade materialet finns på kurshemsidan under  ''Operativsystem (dod)''.
 
 
-\subsection*{Kontrollfrågor}
+\Förberedelser
 \begin{Kontrollfragor}
 	\item Hur ser kommandot ut som loggar in på en annan dator via nätet (t.ex. om du vill logga in hemifrån)?
 	\item Hur gör man för att byta lösenord på studentdatorerna?
@@ -78,7 +78,7 @@ Kom ihåg att laborationen är ett inlärningsmoment. Ta hjälp av materialet oc
 	\begin{Deluppgifter}
 		\item Skriv ut en innehållsförteckning över din hemkatalog. Skriv också ut en förteckning där filer vars namn börjar med punkt (s.k. \emph{punktfiler}) också skrivs ut.
 		\item Gå till katalogen \code{dod-lab-material/unix/unix-lab-fs/projects/beta/data} bland labbfilerna. Skriv ut en innehållsförteckning över katalogen. Skriv ut en förteckning över de filer vars namn innehåller strängen \code{report}.
-		\item Prova hur filnamnskomplettering fungerar. Skriv \code{less\ r} och tryck på \commandchar{tab}. Datorn fyller i tecken i filnamnet så länge de är unika (nu står det \code{less report} på kommando\-raden). Det finns mer än en fil vars namn börjar med \file{report}. Tryck på \commandchar{tab} en gång till (ibland behövs det två extra tryckningar) så får du en lista över dessa filer. Skriv \code{\_f} och tryck på \commandchar{tab} igen; datorn fyller i till det unika filnamnet \file{report\_final.txt}. Tryck på \commandchar{return} för att titta på filen.
+		\item Prova hur filnamnskomplettering fungerar. Skriv \code{less\ r} och tryck på \commandchar{tab}. Datorn fyller i tecken i filnamnet så länge de är unika (nu står det \code{less report} på kommando\-raden). Det finns mer än en fil vars namn börjar med \file{report}. Tryck på \commandchar{tab} en gång till (ibland behövs det två extra tryckningar) så får du en lista över dessa filer. Skriv \code{\_f} och tryck på \commandchar{tab} igen; datorn fyller i till det unika filnamnet \file{report\_final.txt}. Tryck på \commandchar{retur} för att titta på filen.
 		\item Flytta dig runt i mappstrukturen och undersök vilka filer som finns.
 		\item Undersök hur mycket utrymme du har tillgängligt för att lagra filer.
 		\item Tag reda på hur stor filen \file{example.txt} i \file{dod-lab-material} är. Komprimera därefter filen och tag reda på storleken hos den komprimerade filen. Återställ sedan filen till sitt ursprungliga utseende.
@@ -89,7 +89,7 @@ Kom ihåg att laborationen är ett inlärningsmoment. Ta hjälp av materialet oc
 		\item Gör samma sak som i uppgift \ref{del:i}--\ref{del:k} utan att använda en temporär fil. Koppla i stället ihop kommandona med en pipe (|).
 	\end{Deluppgifter}
 	\item Editering av text. På LTHs Linuxdatorer finns flera editorer, till exempel \code{nano} (enkel, terminalbaserad), \code{code} (VS Code) (enkel, fönsterbaserad) och \code{emacs} (avancerad). Du får naturligtvis använda vilken editor du vill normalt, men prova gärna med både \code{nano} och \code{code}.\\
-	\textbf{Tips}: I \code{nano} betyder~~\code{\^} (den lilla ``hatten'') Control-knappen (\code{CTRL}) på tangentbordet. Många funktioner har alternativa kortkommandon, t.ex. \code{M-R} för Replace, där \code{M} står för Meta-tangenten (ofta Alt-tangenten). Se \code{nano}'s hjälpskärm med \code{\^~G} (Control-G).
+	\textbf{Tips}: I \code{nano} betyder~~\code{\^} (den lilla \enquote{hatten}) Control-knappen (\code{CTRL}) på tangentbordet. Många funktioner har alternativa kortkommandon, t.ex. \code{M-R} för Replace, där \code{M} står för Meta-tangenten (ofta Alt-tangenten). Se \code{nano}'s hjälpskärm med \code{\^~G} (Control-G).
 
 	\begin{Deluppgifter}
 		\item Starta t.ex. VS Code och läs in filen \file{example.txt} genom att i terminalfönstret skriva:\\
@@ -112,7 +112,7 @@ Kom ihåg att laborationen är ett inlärningsmoment. Ta hjälp av materialet oc
 		\item Skriv kommandot \code{xeyes} i terminalfönstret. Flytta musen så ser du att ögonen följer musmarkören. Notera att man inte kan fortsätta att skriva kommandon i fönstret eftersom det är låst av \code{xeyes}-programmet.
 		\item Skriv \commandchar{control-c} i kommandofönstret för att avbryta \code{xeyes}-programmet. Programmets fönster försvinner när man avbryter programmet.
 		\item Skriv nu \code{xeyes \&} i terminalfönstret. \code{\&}-tecknet betyder att programmet ska köras som en självständig process som inte är kopplad till terminalfönstret. Nu kan man alltså fortsätta att skriva kommandon i terminalfönstret. Avsluta \code{xeyes} genom att högerklicka med musen på ikonen för \code{xeyes} i verktygsraden på skärmens vänstra sida. Välj \code{Quit} i menyn som visas.
-		\item Man kan tillfälligt avbryta exekveringen av ett program med \commandchar{control-z}. Skriv \code{xeyes} och sedan \commandchar{control-z}. Notera att programmet nu inte är aktivt (ögonen följer inte musmarkören). Med kommandot \code{fg} (foreground) återupptar man exekveringen igen. Om man i stället ger kommandot \code{bg} (background) återupptar man exekveringen ``i bakgrunden'', precis som om man hade startat programmet med \code{xeyes \&}.
+		\item Man kan tillfälligt avbryta exekveringen av ett program med \commandchar{control-z}. Skriv \code{xeyes} och sedan \commandchar{control-z}. Notera att programmet nu inte är aktivt (ögonen följer inte musmarkören). Med kommandot \code{fg} (foreground) återupptar man exekveringen igen. Om man i stället ger kommandot \code{bg} (background) återupptar man exekveringen \enquote{i bakgrunden}, precis som om man hade startat programmet med \code{xeyes \&}.
 	\end{Deluppgifter}
 
 	% \clearpage
